--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "@clickhouse/client": "^1.12.1",
-    "@iobroker/adapter-core": "^3.3.2"
+    "@iobroker/adapter-core": "^3.3.2",
+    "influxdb-client": "^0.0.1"
   },
   "devDependencies": {
     "@alcalzone/release-script": "^5.0.0",
@@ -68,7 +69,8 @@
     "lint": "eslint .",
     "translate": "translate-adapter",
     "release": "release-script",
-    "downsample": "node scripts/downsample.js"
+    "downsample": "node scripts/downsample.js",
+    "migrate:influx": "node scripts/migrate-influx.js"
   },
   "bugs": {
     "url": "https://github.com/tim2zg/ioBroker.clickhouse/issues"
